# game

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  game.c  player.c  player.h  utils.c  utils.h
box/: .travis.yml  CMakeLists.txt  game.c  player.c  window_manager.h
box/test/: CMakeLists.txt  utils_test.c  utils_test.h
character/: CMakeLists.txt  character.c  character.h
draughts/: .gitignore  draughts.c  draughts.h  mocks.c  mocks.h  test.c
plataformer/: Makefile.am  README  autogen.sh  configure.ac
plataformer/src/: main.c  main.h  player.c  status.c  status.h
test/: CMakeLists.txt  main.c  test.sh  utils_test.c
utils/: CMakeLists.txt  utils.c  window_manager.c
